--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header and Footer</title>
-    <link rel="stylesheet" href="styles/3-common.css">
+    <link rel="stylesheet" href="styles/4-filters.css">
+    <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="icon" href="https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon.png">
@@ -15,6 +16,11 @@
         <div class="logo">
         </div>
     </header>
+    <div class="container">
+        <section class="filters">
+            <button class="search-button">Search</button>
+        </section>
+    </div>
     <footer>
         <span>Best School</span>
     </footer>
